--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Welcome to Taskr!</h1>
+<div class='jumbotron'>
+<h1><i class="fa fa-circle-o-notch" aria-hidden="true"></i> Taskr</h1>
 <p>Helping you organize your tasks better!</p>
+<p>
+  <%= link_to 'Sign Up', '#', class: 'btn btn-primary btn-lg' %>
+</p>
+</div>
