added logic to menus

--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -7,10 +7,17 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-link" ><%= link_to 'Home', root_path %>
+          <!-- <span class="sr-only">(current)</span></li> -->
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+      <li class="nav-item active">
+        <!-- <a class="nav-link" href="#">Link</a> -->
+        <li class="nav-link" ><%= link_to 'About', about_path %> </li>
+        <li class="nav-link" ><%= link_to 'Log in', new_user_session_path %> </li>
+        <% if current_user %>
+          <li class="nav-link" ><%= link_to 'Account Settings', edit_user_registration_path %> </li>
+          <li class="nav-link" ><%= link_to 'Log out', destroy_user_session_path, method: :delete  %> </li>
+        <% end %>
       </li>
 
     </ul>
