--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,6 @@
 <h1><i class="fa fa-circle-o-notch" aria-hidden="true"></i> Taskr</h1>
 <p>Helping you organize your tasks better!</p>
 <p>
-  <%= link_to 'Sign Up', '#', class: 'btn btn-primary btn-lg' %>
+  <%= link_to 'Sign Up', new_user_registration_path, class: 'btn btn-primary btn-lg' %>
 </p>
 </div>
