--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,22 +1,22 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<h2 class="text-center">Edit <%= resource_name.to_s.humanize %></h2>
   <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+  <div class="form-inputs form-control form-signin">
+    <%= f.input :email, required: false, disabled: true, label:false, placeholder: 'Email' %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
-    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
-    <%= f.input :password_confirmation, required: false %>
-    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
-  </div>
+    <%= f.input :password, autocomplete: "off", label:false, autofocus: true, placeholder: 'New Password', hint: "leave it blank if you don't want to change it", required: false %>
+    <%= f.input :password_confirmation, required: false, label:false, placeholder: 'Re-enter new password' %>
+    <%= f.input :current_password, label:false, placeholder: 'Current password', hint: "we need your current password to confirm your changes", required: true %>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+    <div class="form-actions">
+      <%= f.button :submit, "Update",  class: 'btn btn-primary btn-block'%>
+  </div>
   </div>
 <% end %>
 
