added show, edit and index links

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,2 +1,6 @@
 <h2> Showing task</h2>
 <strong> Content: </strong> <%= @task.content %>
+<p>
+  <%= link_to 'All Tasks  ', tasks_path %> |
+  <%= link_to 'Edit Tasks ', edit_task_path(@task) %>
+</p>
