added delete, created form partials

--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,15 +1,2 @@
 <h2> New Task </h2>
-<% if @task.errors.any? %>
-<ul class="errors">
-  <% @task.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-  <% end %>
-</ul>
-<% end %>
-
-<%= simple_form_for @task do |f| %>
-  <%= f.input :content, required: true%>
-
-  <%= f.button :submit, class: 'btn btn-primary' %>
-
-<% end %>
+<%= render 'form' %>
