--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -8,9 +8,9 @@
     <tr>
       <td><%= task.id %></td>
       <td><%= task.content %></td>
-      <td><%= link_to 'Show  ', task_path(task) %></td>
-      <td><%= link_to 'Edit  ', edit_task_path(task) %></td>
-      <td><%= link_to 'Delete', task_path(task), method: :delete, data: {confirm: "Are you sure you want to delete this task?"} %></td>
+      <td><%= link_to '  Show  |', task_path(task)   %></td>
+      <td><%= link_to '  Edit  |', edit_task_path(task)   %></td>
+      <td><%= link_to '  Delete', task_path(task), method: :delete, data: {confirm: "Are you sure you want to delete this task?"} %></td>
     </tr>
     <% end %>
 </table>
