--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,13 +1,54 @@
-<h2> All Tasks</h2>
+<h2>To Do</h2>
 
 <p><%= link_to 'New Task', new_task_path %></p>
 <table>
   <!-- <th><strong>Id.</strong><th> -->
-  <th><strong>Content</strong><th>
-    <% @tasks.each do |task| %>
+  <!-- <th><strong>Id</strong><th> -->
+  <th>Content<th>
+  <th>State<th>
+    <% @to_do.each do |task| %>
     <tr>
-      <td><%= task.id %></td>
+      <!-- <td><%= task.id %></td> -->
       <td><%= task.content %></td>
+      <td><%= task.state %></td>
+      <td><%= link_to '  Show  |', task_path(task)   %></td>
+      <td><%= link_to '  Edit  |', edit_task_path(task)   %></td>
+      <td><%= link_to '  Delete', task_path(task), method: :delete, data: {confirm: "Are you sure you want to delete this task?"} %></td>
+    </tr>
+    <% end %>
+</table>
+
+<h2>Doing</h2>
+
+<table>
+  <!-- <th><strong>Id.</strong><th> -->
+  <!-- <th><strong>Id</strong><th> -->
+  <th>Content<th>
+  <th>State<th>
+    <% @doing.each do |task| %>
+    <tr>
+      <!-- <td><%= task.id %></td> -->
+      <td><%= task.content %></td>
+      <td><%= task.state %></td>
+      <td><%= link_to '  Show  |', task_path(task)   %></td>
+      <td><%= link_to '  Edit  |', edit_task_path(task)   %></td>
+      <td><%= link_to '  Delete', task_path(task), method: :delete, data: {confirm: "Are you sure you want to delete this task?"} %></td>
+    </tr>
+    <% end %>
+</table>
+
+<h2>Done</h2>
+
+<table>
+  <!-- <th><strong>Id.</strong><th> -->
+  <!-- <th><strong>Id</strong><th> -->
+  <th>Content<th>
+  <th>State<th>
+    <% @done.each do |task| %>
+    <tr>
+      <!-- <td><%= task.id %></td> -->
+      <td><%= task.content %></td>
+      <td><%= task.state %></td>
       <td><%= link_to '  Show  |', task_path(task)   %></td>
       <td><%= link_to '  Edit  |', edit_task_path(task)   %></td>
       <td><%= link_to '  Delete', task_path(task), method: :delete, data: {confirm: "Are you sure you want to delete this task?"} %></td>
